# hardware-edsl

./: LICENSE  cabal.project  hardware-edsl.cabal  imperative-edsl-vhdl.cabal
examples/: AXI.hs  Array.hs  Bits.hs  Component.hs  Int.hs  Simple.hs  Types.hs  notes.txt
src/Language/Embedded/: Hardware.hs  VHDL.hs
src/Language/Embedded/Hardware/: AXI.hs  Command.hs  Expression.hs  Interface.hs
src/Language/Embedded/Hardware/AXI/: Controller.hs
src/Language/Embedded/Hardware/Command/: CMD.hs  Frontend.hs
src/Language/Embedded/Hardware/Command/Backend/: VHDL.hs
src/Language/Embedded/Hardware/Common/: AXI.hs  LDPC.hs
src/Language/Embedded/Hardware/Expression/: Frontend.hs  Hoist.hs  Represent.hs  Syntax.hs
src/Language/Embedded/Hardware/Expression/Backend/: VHDL.hs
src/Language/Embedded/Hardware/Expression/Represent/: Bit.hs
src/Language/Embedded/Hardware/Interface/: AXI.hs
src/Language/Embedded/VHDL/: Command.hs  Expression.hs  Interface.hs  Monad.hs
src/Language/Embedded/VHDL/Expression/: Format.hs  Hoist.hs  Represent.hs  Type.hs
src/Language/Embedded/VHDL/Monad/: Architecture.hs  Entity.hs  Expression.hs  Type.hs  Util.hs  VHDL.hs
