name:                hardware-edsl
version:             0.1.0.0
synopsis:            Deep embedding of hardware descriptions with code generation.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Markus Aronsson
maintainer:          mararon@chalmers.se
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Language.Embedded.Hardware,
    Language.Embedded.Hardware.Expression,
    Language.Embedded.Hardware.Expression.Syntax,
    Language.Embedded.Hardware.Expression.Represent,
    Language.Embedded.Hardware.Expression.Frontend,
    Language.Embedded.Hardware.Command,
    Language.Emdedded.Hardware.Command.CMD,
    Language.Embedded.Hardware.Command.Frontend,
    Language.Embedded.Hardware.Interface
    Language.Embedded.VHDL,
    Language.Embedded.VHDL.Monad,
    Language.Embedded.VHDL.Monad.Type,
    Language.Embedded.VHDL.Monad.Expression

  other-modules:
    Language.Embedded.Hardware.Expression.Hoist,
    Language.Embedded.Hardware.Expression.Backend.VHDL,
    Language.Embedded.Hardware.Command.Backend.VHDL
    
  other-extensions:
    GADTs,
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    FlexibleContexts,
    FlexibleInstances,
    MultiParamTypeClasses,
    ScopedTypeVariables,
    GeneralizedNewtypeDeriving,
    ConstraintKinds,
    Rank2Types,
    StandaloneDeriving,
    UndecidableInstances
    
  build-depends:
    base >=4.8 && <4.9,
    mtl >=2.2 && <2.3,
    array >=0.5 && <0.6,
    containers >=0.5 && <0.6,
    pretty >=1.1 && <1.2,
    bytestring >=0.10 && <0.11,
    constraints >=0.6,
    syntactic >=3.2,
    operational-alacarte >=0.1.1,
    language-vhdl >=0.1.2.5
    
  hs-source-dirs:
    src
    
  default-language:
    Haskell2010